--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset' utf 8'>
+    <meta http-equiv='x-ua-compatidle' content='IE=edge'>
+    <title>loja de roupa</title>
+    <meta name='viewport' content='width, initial-scale=1'>
+    <link rel='sty.lesheet' type='textlcss'media='scree'href='style css'>
+    <script src='main.js'></script>
+<Yhead>
+<body>
+    <header><p><img id='imagem da loja de roupas' src='NOME ARQUIVO png' alt=roupas masculinas
