--- a/index.html
+++ b/index.html
@@ -9,4 +9,26 @@
     <script src='main.js'></script>
 <Yhead>
 <body>
-    <header><p><img id='imagem da loja de roupas' src='NOME ARQUIVO png' alt=roupas masculinas
+    <header><p><img id='imagem da loja de roupas' src='NOME ARQUIVO png' alt=roupas masculinas></p>
+    </header>
+    <main>
+    <h1>loja de roupas</h1>
+<div class='primeiro paragrafo'>
+    <h3>nossa loja de roupas 01</h3>
+    <p><i><b>texto descritivo 01</b></i></p>
+    <01 id='lista'1>
+    <1i> item 01</1i>
+    <li> item 02</01>li>
+    <li> item 03</li>
+    </div><ul></ul>
+</main><div>
+<div class='segundo paragrafo'
+    <h3>tiutlo texto 02</h3>
+    <p>texto descritivo 02 </p>
+</div>
+    <h1> *** </h1>
+    </main>
+    <footer><p><img id= 'titulo imagem''src='nome arquivo png'alt=''descriçao imagem'
+    </footer>
+</body>
+</html>
