--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
     <h1>loja de roupas</h1>
-<div class='primeiro paragrafo'>
+<div class= Vou falar sobre minha loja de roupas e calçados,no começo era dificil de lidar com tudo porque nossa marca não era tão conhecida mas ao mesmo tempo precisavamos de resultados para manter a loja.>
     <h3>nossa loja de roupas 01</h3>
     <p><i><b>texto descritivo 01</b></i></p>
     <01 id='lista'1>
@@ -22,13 +22,13 @@
     <li> item 03</li>
     </div><ul></ul>
 </main><div>
-<div class='segundo paragrafo'
+<div class= O tempo foi passando e os numeros de clientes foi aumentando,os funicionarios foram aumentando,nossa marca ja era mais reconhecida e as responsabilidades de tudo que passava de dentro da loja foi aumentando os pedidos dos produtos,começamos a ter lojas em outras cidades,em e também a entregar nas casas dos clientes os produtos. A loja abre as 10:oo da manhã e facha as 6:30 da tarde
     <h3>tiutlo texto 02</h3>
     <p>texto descritivo 02 </p>
 </div>
     <h1> *** </h1>
     </main>
-    <footer><p><img id= 'titulo imagem''src='nome arquivo png'alt=''descriçao imagem'
+    <footer><p><img id= 'loja de roupas''src='nome arquivo png'alt=''descriçao imagem'
     </footer>
 </body>
 </html>
