--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width, initial-scale=1'>
     <link rel='sty.lesheet' type='textlcss'media='scree'href='style css'>
     <script src='main.js'></script>
-<Yhead>
+</head>
 <body>
     <header><p><img id='imagem da loja de roupas' src='NOME ARQUIVO png' alt=roupas masculinas></p>
     </header>
