--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset' utf 8'>
-    <meta http-equiv='x-ua-compatidle' content='IE=edge'>
-    <title>loja de roupa</title>
-    <meta name='viewport' content='width, initial-scale=1'>
-    <link rel='sty.lesheet' type='textlcss'media='scree'href='style css'>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>TITULO DA ABA</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
-<body>
-    <header><p><img id='imagem da loja de roupas' src='NOME ARQUIVO png' alt=roupas masculinas></p>
+<body> 
+    <header><p><img  id="TITULOIMAGEM" src="NOMEDOARQUIVO.jpeg" alt="DESCRICAO IMAGEM"></p>
     </header>
     <main>
-    <h1>loja de roupas</h1>
-<div class= Vou falar sobre minha loja de roupas e calçados,no começo era dificil de lidar com tudo porque nossa marca não era tão conhecida mas ao mesmo tempo precisavamos de resultados para manter a loja.>
-    <h3>nossa loja de roupas 01</h3>
-    <p><i><b>texto descritivo 01</b></i></p>
-    <01 id='lista'1>
-    <1i> item 01</1i>
-    <li> item 02</01>li>
-    <li> item 03</li>
-    </div><ul></ul>
-</main><div>
-<div class= O tempo foi passando e os numeros de clientes foi aumentando,os funicionarios foram aumentando,nossa marca ja era mais reconhecida e as responsabilidades de tudo que passava de dentro da loja foi aumentando os pedidos dos produtos,começamos a ter lojas em outras cidades,em e também a entregar nas casas dos clientes os produtos. A loja abre as 10:oo da manhã e facha as 6:30 da tarde
-    <h3>tiutlo texto 02</h3>
-    <p>texto descritivo 02 </p>
+    <h1>TITULO DA PAGINA</h1>
+<div class="PRIMEIROPARAGRAFO">
+    <h3>TITULO DO TEXTO 01</h3>
+    <p><i><b>TEXTO DESCRITIVO 01</b></i></p>
+    <ul id="lista">
+        <li>ITEM O1</li>
+        <li>ITEM 02</li>
+        <li>ITEM 03</li>
+    </ul>
 </div>
-    <h1> *** </h1>
+<div class="SEGUNDOPARAGRAFO">
+    <h3>TITULO TEXTO 02</h3>
+    <p>TEXTO DESCRITIVO 02</p>
+</div>
+    <h1>***</h1>
     </main>
-    <footer><p><img id= 'loja de roupas''src='nome arquivo png'alt=''descriçao imagem'
+    <footer><p><img  id="TITULOIMAGEM" src="NOMEDOARQUIVO.jpeg" alt="DESCRICAO IMAGEM"></p>
     </footer>
 </body>
-</html>
+</html> 
