--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <header><p><img  id="TITULOIMAGEM" src="NOMEDOARQUIVO.jpeg" alt="DESCRICAO IMAGEM"></p>
     </header>
     <main>
-    <h1>TITULO DA PAGINA</h1>
-<div class="PRIMEIROPARAGRAFO">
+    <h1>LOJA DE ROUPAS</h1>
+<div class="Vou falar sobre a minha loja de roupas e calçados, no começo era dificil  de lidar com tudo porque nossa marca não era tão reconhecido mas ao mesmo tempo precisavamos de resultados para manter a loja.">
     <h3>TITULO DO TEXTO 01</h3>
     <p><i><b>TEXTO DESCRITIVO 01</b></i></p>
     <ul id="lista">
-        <li>ITEM O1</li>
-        <li>ITEM 02</li>
-        <li>ITEM 03</li>
+        <li>Camisa polo</li>
+        <li>Camisa selção brasileira (masculina)</li>
+        <li>Calça cargo (unissex)</li>
     </ul>
 </div>
-<div class="SEGUNDOPARAGRAFO">
+<div class="o tempo foi passando  e os numeros de clientes foi aumentando,os funcionarios foi aumentando,nossa marca era mais reconhecida e as responsabilidades de tudo que passava de dentro da loja foi aumentando,os pedidos dos produtos foi aumentando cada vez mais e começamos a ter lojas em outras cidades,e também começamos a entregar na casa dos clientes os produtos.A loja abre as 10:00 da manhã e fecha as 18:30">
     <h3>TITULO TEXTO 02</h3>
     <p>TEXTO DESCRITIVO 02</p>
 </div>
