--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     </header>
     <main>
     <h1>LOJA DE ROUPAS</h1>
-<div class="Vou falar sobre a minha loja de roupas e calçados, no começo era dificil  de lidar com tudo porque nossa marca não era tão reconhecido mas ao mesmo tempo precisavamos de resultados para manter a loja.">
-    <h3>TITULO DO TEXTO 01</h3>
-    <p><i><b>TEXTO DESCRITIVO 01</b></i></p>
+<div class="PRIMEIROPARAGRAFO ">
+    <h3>TITULO DO TEXTO 01</h3>dificil  de lidar com tudo porque nossa marca não era tão reconhecido mas ao mesmo tempo precisavamos de resultados para manter a loja.
+    <p><i><b>Vou falar sobre minha loja de roupas e calçados, no começo era dificil de lidar com tudo porque nossa marca não era tão reconhecida mas ao mesmo tempo precisavamos de resultados para manter a loja.</b></i></p>
     <ul id="lista">
         <li>Camisa polo</li>
         <li>Camisa selção brasileira (masculina)</li>
         <li>Calça cargo (unissex)</li>
     </ul>
 </div>
-<div class="o tempo foi passando  e os numeros de clientes foi aumentando,os funcionarios foi aumentando,nossa marca era mais reconhecida e as responsabilidades de tudo que passava de dentro da loja foi aumentando,os pedidos dos produtos foi aumentando cada vez mais e começamos a ter lojas em outras cidades,e também começamos a entregar na casa dos clientes os produtos.A loja abre as 10:00 da manhã e fecha as 18:30">
+<div class+=SEGUNDOPARAGRAFO">
     <h3>TITULO TEXTO 02</h3>
-    <p>TEXTO DESCRITIVO 02</p>
+    <p>O tempo foi passando e os numeros de clientes foi aumentando,os funcionarios também,nossa marrca ja era mais reconhecida e as responsabilidades de tudo que passava de dentro da loja foi aumentando os pedidos dos produtos foi aumentando cada vez mais e começamos a ter lojas em outras cidades, também começamos a entregar na casa dos clientes os produtos.A loja abre as 10:00 e fechava 18:30</p>
 </div>
     <h1>***</h1>
     </main>
