--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
     <h1>LOJA DE ROUPAS</h1>
 <div class="PRIMEIROPARAGRAFO ">
-    <h3>TITULO DO TEXTO 01</h3>dificil  de lidar com tudo porque nossa marca não era tão reconhecido mas ao mesmo tempo precisavamos de resultados para manter a loja.
+    <h3>O começo da loja</h3>
     <p><i><b>Vou falar sobre minha loja de roupas e calçados, no começo era dificil de lidar com tudo porque nossa marca não era tão reconhecida mas ao mesmo tempo precisavamos de resultados para manter a loja.</b></i></p>
     <ul id="lista">
         <li>Camisa polo</li>
@@ -23,7 +23,7 @@
     </ul>
 </div>
 <div class+=SEGUNDOPARAGRAFO">
-    <h3>TITULO TEXTO 02</h3>
+    <h3>A evolução da minha loja</h3>
     <p>O tempo foi passando e os numeros de clientes foi aumentando,os funcionarios também,nossa marrca ja era mais reconhecida e as responsabilidades de tudo que passava de dentro da loja foi aumentando os pedidos dos produtos foi aumentando cada vez mais e começamos a ter lojas em outras cidades, também começamos a entregar na casa dos clientes os produtos.A loja abre as 10:00 e fechava 18:30</p>
 </div>
     <h1>***</h1>
